# mxLog

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp  test.py
include/: LogLevel.hpp  LogManager.hpp  SimpleFormatter.hpp  appender.hpp  async_logger.hpp  config.hpp  console_appender.hpp  file_appender.hpp  formatter.hpp
lib/DEBUG/: mxLogLib.lib
lib/RELEASE/: mxLogLib.lib
mxLogPy/: setup.py
mxLogPy/include/: console_appender.hpp  file_appender.hpp  formatter.hpp  logger.hpp
mxLogPy/lib/: mxLogLib.lib  mxLogLibd.lib
mxLogPy/lib/DEBUG/: mxLogPy.cp311-win_amd64.pyd  mxLogPy.exp  mxLogPy.lib
mxLogPy/lib/Release/: mxLogPy.cp311-win_amd64.pyd  mxLogPy.exp
mxLogPy/mxLogPy/: mxLogPy.cp311-win_amd64.pyd
mxLog_Py/: setup.py
mxLog_Py/mxLog_Package/: mxLogPy.cp311-win_amd64.pyd
python_module/: CMakeLists.txt  README.md  pybind_wrapper.cpp  setup.py
src/: SimpleFormatter.cpp  async_logger.cpp  config.cpp  console_appender.cpp  file_appender.cpp  formatter.cpp  main.cpp
